--- a/app/src/main/res/layout/activity_auto_reply.xml
+++ b/app/src/main/res/layout/activity_auto_reply.xml
@@ -4,204 +4,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:focusable="true"
-    tools:context="com.training.android.undivided.AutoReplyActivity">
-    <RelativeLayout
-        android:id="@+id/form_background"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="com.example.hillarybriones.autoreplysms.MainActivity">
+
+    <ListView
+        android:id="@+id/main_list"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:background="@color/light_gray"
-        android:focusable="true"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingBottom="@dimen/activity_horizontal_margin"
-        android:layout_marginBottom="70dp">
+        android:layout_height="fill_parent" >
+    </ListView>
 
-        <TextView
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" >
+
+        <ProgressBar
+            android:id="@+id/main_progress_bar"
+            style="?android:attr/progressBarStyleLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/message_label_inactive"
-            android:id="@+id/message_label"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="0dp"
-            android:paddingLeft="8dp" />
-
-        <LinearLayout
-            android:onClick="onMessageClick"
-            android:id="@+id/message_preview"
-            android:orientation="horizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/message_label">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Sorry, I am driving right now, but I will asdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfcall you back as soon as I can."
-                android:id="@+id/message"
-                android:layout_below="@+id/message_label"
-                android:background="@drawable/text_bubble"
-                android:layout_weight="3"
-                android:typeface="normal"
-                android:paddingLeft="20dp"
-                android:paddingTop="20dp"
-                android:paddingRight="40dp"
-                android:paddingBottom="20dp" />
-
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/my_image"
-                android:src="@android:drawable/sym_def_app_icon"
-                android:layout_gravity="bottom"
-                android:layout_marginLeft="10dp" />
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/timer_label_inactive"
-            android:id="@+id/timer_label"
-            android:layout_below="@+id/message_preview"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="10dp"
-            android:paddingLeft="8dp" />
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/timer_label"
-            android:weightSum="4"
-            android:paddingLeft="8dp"
-            android:gravity="left"
-            android:layout_marginLeft="-6dp">
-
-            <LinearLayout
-                android:onClick="onTimerClick"
-                android:orientation="horizontal"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:layout_below="@+id/timer_label"
-                android:background="@drawable/card"
-                android:layout_weight="4"
-                android:paddingTop="12dp"
-                android:paddingBottom="12dp">
-
-                <LinearLayout
-                    android:onClick="onTimerClick"
-                    android:orientation="vertical"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal|top">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:text="00"
-                        android:onClick="onTimerClick"
-                        android:id="@+id/hours"
-                        android:layout_centerVertical="true"
-                        android:layout_centerHorizontal="true"
-                        android:textSize="40sp"
-                        android:typeface="monospace"
-                        android:autoText="true" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:text="HOURS"
-                        android:id="@+id/hours_label"
-                        android:textSize="10dp"
-                        android:onClick="onTimerClick"
-                        android:textColor="#ffbbbbbb" />
-                </LinearLayout>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:onClick="onTimerClick"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text=":"
-                    android:id="@+id/colon"
-                    android:textSize="40sp"
-                    android:typeface="monospace"
-                    />
-
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:onClick="onTimerClick"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal|top">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="29"
-                        android:id="@+id/minutes"
-                        android:layout_centerVertical="true"
-                        android:layout_centerHorizontal="true"
-                        android:textSize="40sp"
-                        android:onClick="onTimerClick"
-                        android:typeface="monospace"
-                        android:autoText="false"
-                        android:singleLine="false"
-                        android:phoneNumber="false"
-                        android:password="false" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:text="MINUTES"
-                        android:onClick="onTimerClick"
-                        android:id="@+id/minutes_label"
-                        android:textSize="10dp"
-                        android:textColor="#ffbbbbbb" />
-                </LinearLayout>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="fill_parent"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:text="59"
-                    android:id="@+id/seconds"
-                    android:layout_toRightOf="@+id/hours"
-                    android:layout_toEndOf="@+id/hours"
-                    android:textSize="20sp"
-                    android:layout_centerVertical="true"
-                    android:typeface="monospace"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="6dp" />
-            </LinearLayout>
-        </LinearLayout>
-
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:indeterminateDrawable="@drawable/progress"
+            android:visibility="gone" >
+        </ProgressBar>
     </RelativeLayout>
 
-    <ToggleButton
-        android:layout_width="fill_parent"
-        android:layout_height="70dp"
-        android:layout_alignParentBottom="true"
-        android:textOn="DEACTIVATE"
-        android:textOff="ACTIVATE"
-        android:id="@+id/toggle_activation"
-        android:layout_margin="0dp"
-        android:background="@color/green"
-        android:textColor="#FFFFFF"
-        android:typeface="monospace"
-        android:onClick="onToggleActivation"
-        android:textSize="24sp" />
 </RelativeLayout>
