Added Main Screen With Drive Mode Logo and Added Settings Menu On Main Screen

--- a/app/src/main/res/menu/settings.xml
+++ b/app/src/main/res/menu/settings.xml
@@ -5,5 +5,8 @@
     <item
         android:id="@+id/menu_settings"
         android:title="@string/menu_string_settings" />
+    <item
+        android:id="@+id/menu_functions"
+        android:title="Functions" />
 
 </menu>
