--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.training.android.undivided.LandingScreen">
+    tools:context="com.training.android.undivided.SplashScreenActivity">
 
     <ImageView
         android:id="@+id/ivUndivided"
