--- a/app/src/main/res/layout/activity_auto_reply_settings.xml
+++ b/app/src/main/res/layout/activity_auto_reply_settings.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.training.android.undivided.AutoReplySettings">
+    tools:context="com.training.android.undivided.AutoReply.AutoReplySettings">
 
 </android.support.constraint.ConstraintLayout>
