--- a/app/src/main/res/layout/activity_outbox.xml
+++ b/app/src/main/res/layout/activity_outbox.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.training.android.undivided.Outbox">
+    tools:context="com.training.android.undivided.AutoReply.Outbox">
     <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
