--- a/app/src/main/res/layout/activity_customize_message.xml
+++ b/app/src/main/res/layout/activity_customize_message.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.training.android.undivided.CustomizeMessage">
+    tools:context="com.training.android.undivided.AutoReply.CustomizeMessage">
 
 
     <RelativeLayout
