Added UI for navigation mode

--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -1,8 +1,31 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:map="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/map"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.training.android.undivided.NavigationMode.Navigation" />
+    tools:context="com.training.android.undivided.NavigationMode.Navigation">
+
+
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+   <android.support.constraint.ConstraintLayout
+       android:layout_width="match_parent"
+       android:layout_height="200dp"
+       android:layout_alignParentBottom="true"
+       android:gravity="center"
+       android:background="@color/light_gray">
+
+       <TextView
+           android:id="@+id/idTotalDistance"
+           android:layout_width="100dp"
+           android:layout_height="100dp"
+           android:text="Total Distance:"
+           tools:layout_editor_absoluteX="37dp"
+           tools:layout_editor_absoluteY="392dp" />
+   </android.support.constraint.ConstraintLayout>
+
+</RelativeLayout>
