--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -4,11 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/welcomeslide"
+    android:background="@drawable/bg_eight"
     android:orientation="vertical"
     android:weightSum="4"
 
     tools:context="com.training.android.undivided.Authentication.AuthActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -19,8 +20,9 @@
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="234dp"
+            android:layout_width="303dp"
             android:layout_height="153dp"
+            android:layout_weight="0.56"
             app:srcCompat="@drawable/logopng" />
 
         <ImageView
@@ -28,8 +30,7 @@
             style="@style/ThemeOverlay.FirebaseIcon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="@string/desc_firebase_lockup"
-            />
+            android:contentDescription="@string/desc_firebase_lockup" />
 
         <TextView
             android:id="@+id/status"
