--- a/app/src/main/res/layout/activity_customize_message.xml
+++ b/app/src/main/res/layout/activity_customize_message.xml
@@ -30,7 +30,8 @@
     <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_marginBottom="5sp" >
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <LinearLayout
             android:id="@+id/addRule_fields"
