--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/colorPrimary"
-    android:theme="@style/ThemeOverlay.MyNoTitleActivity">
+    android:theme="@style/AppTheme.NoActionBar">
 
     <AutoCompleteTextView
         android:id="@+id/autoCompleteTextView"
