--- a/app/src/main/res/menu/save_group.xml
+++ b/app/src/main/res/menu/save_group.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-    <item
-        android:id="@+id/add_action_save"
-        android:icon="@drawable/ic_action_save"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-        android:title="@string/addedit_menu_save"
+    <item
+        android:id="@+id/save_group"
+        android:icon="@drawable/ic_action_save"
+        android:title="Save Group"
         app:showAsAction="ifRoom|collapseActionView" />
+
 </menu>
