--- a/app/src/main/res/layout/activity_functions.xml
+++ b/app/src/main/res/layout/activity_functions.xml
@@ -45,4 +45,14 @@
         android:text="Emrgcy"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnAR" />
+
+    <Button
+        android:id="@+id/btnDisableAppSwitch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:text="DAS"
+        app:layout_constraintLeft_toRightOf="@+id/btnEmergency"
+        app:layout_constraintTop_toBottomOf="@+id/btnMessage" />
 </android.support.constraint.ConstraintLayout>
