--- a/app/src/main/res/layout/welcome_slide2.xml
+++ b/app/src/main/res/layout/welcome_slide2.xml
@@ -8,7 +8,7 @@
     <ImageView
         android:layout_width="900dp"
         android:layout_height="900dp"
-        app:srcCompat="@drawable/Welcome2"
+        app:srcCompat="@drawable/welcome2"
         android:id="@+id/imageView5"
         android:layout_alignBottom="@+id/textView2"
         android:layout_alignParentStart="true" />
