--- a/app/src/main/res/layout/welcome_slide3.xml
+++ b/app/src/main/res/layout/welcome_slide3.xml
@@ -23,7 +23,7 @@
         android:layout_height="950dp"
 
         android:layout_weight="3.85"
-        app:srcCompat="@drawable/Welcome3"
+        app:srcCompat="@drawable/welcome3"
         android:layout_alignParentStart="true"
         android:layout_above="@+id/textView5" />
 
