--- a/app/src/main/res/menu/save_group.xml
+++ b/app/src/main/res/menu/save_group.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/save_group"
-        android:icon="@drawable/ic_action_save"
+        android:icon="@drawable/ic_action_done"
         android:title="Save Group"
         app:showAsAction="ifRoom|collapseActionView" />
 
