--- a/app/src/main/res/layout/activity_contact_picker.xml
+++ b/app/src/main/res/layout/activity_contact_picker.xml
@@ -8,7 +8,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    tools:context="com.training.android.undivided.AutoReply.ContactPicker"
+    tools:context="com.training.android.undivided.Group.ContactPicker"
     android:orientation="vertical">
     <RadioGroup
         android:layout_width="fill_parent"
