--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -10,7 +10,7 @@
 
     <ImageView
         android:id="@+id/ivUndivided"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="228dp"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="25dp"
@@ -23,7 +23,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.173"
         app:srcCompat="@drawable/logo2_new"
-        tools:layout_editor_absoluteX="23dp" />
+        android:layout_marginStart="25dp"
+        android:layout_marginEnd="8dp" />
 
     <com.wang.avi.AVLoadingIndicatorView
         style="@style/AVLoadingIndicatorView"
@@ -41,6 +42,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivUndivided"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
 </android.support.constraint.ConstraintLayout>
