--- a/app/src/main/res/layout/fragment_topic.xml
+++ b/app/src/main/res/layout/fragment_topic.xml
@@ -1,15 +1,16 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="5dp"
     android:background="?android:colorBackground"
-    android:orientation="vertical"
-    tools:context="com.training.android.undivided.GroupSender.Fragment.ContactFragment">
+    tools:context="com.training.android.undivided.GroupSender.Fragment.TopicFragment">
 
-    <FrameLayout
+    <RelativeLayout
         android:id="@+id/display_frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="gone">
 
         <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/swiperefresh"
@@ -17,30 +18,28 @@
             android:layout_height="match_parent">
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/contact_list"
+                android:id="@+id/topic_list"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="455dp"
                 android:scrollbars="vertical" />
-
         </android.support.v4.widget.SwipeRefreshLayout>
-    </FrameLayout>
+    </RelativeLayout>
 
     <FrameLayout
         android:id="@+id/waiting_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <TextView
             android:id="@+id/nothing_to_show"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="@string/nothing_to_show"
+            android:text="@string/no_topic"
             android:textColor="#1a1a1a"
             android:textSize="18sp" />
 
     </FrameLayout>
 
-
-</LinearLayout>
+</FrameLayout>
