--- a/app/src/main/res/layout/fragment_group_item.xml
+++ b/app/src/main/res/layout/fragment_group_item.xml
@@ -2,12 +2,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?android:colorBackground"
+    android:descendantFocusability="afterDescendants"
+    android:orientation="vertical"
     tools:context="com.training.android.undivided.GroupSender.Fragment.GroupItemFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
+        android:id="@+id/display_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical"
+        android:weightSum="1">
+
+        <EditText
+            android:id="@+id/group_name"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="0.2"
+            android:hint="GroupName"
+            android:imeOptions="actionDone"
+            android:inputType="text"
+            android:textSize="30sp" />
+
+        <FrameLayout
+            android:id="@+id/contact_frame"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.8" />
+    </LinearLayout>
+
 
 </FrameLayout>
