--- a/app/src/main/res/layout/fragment_main_fragment_abstr.xml
+++ b/app/src/main/res/layout/fragment_main_fragment_abstr.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.training.android.undivided.GroupSender.Fragment.GroupFragment">
+    tools:context="com.training.android.undivided.GroupSender.Fragment.MainFragmentAbstr">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
