Added ViewClass Activity

--- a/app/src/main/res/layout/activity_view_card.xml
+++ b/app/src/main/res/layout/activity_view_card.xml
@@ -76,6 +76,7 @@
                             android:layout_margin="8dp"
                             android:background="@null"
                             android:ems="10"
+                            android:enabled="false"
                             android:hint="Group Name"
                             android:inputType="textPersonName"
                             app:layout_constraintHorizontal_bias="0.0"
@@ -117,6 +118,7 @@
                             android:layout_marginTop="8dp"
                             android:background="@null"
                             android:ems="10"
+                            android:enabled="false"
                             android:gravity="top"
                             android:hint="Description"
                             android:inputType="textPersonName"
@@ -164,6 +166,7 @@
                             android:layout_marginTop="8dp"
                             android:background="@null"
                             android:ems="10"
+                            android:enabled="false"
                             android:gravity="top"
                             android:hint="Reply Message"
                             android:inputType="textPersonName"
