--- a/app/src/main/res/drawable/edit_text_round_corner.xml
+++ b/app/src/main/res/drawable/edit_text_round_corner.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners
-        android:bottomLeftRadius="5dip"
-        android:bottomRightRadius="5dip"
-        android:topLeftRadius="5dip"
-        android:topRightRadius="5dip"
-        />
+    <!--<corners-->
+        <!--android:bottomLeftRadius="5dip"-->
+        <!--android:bottomRightRadius="5dip"-->
+        <!--android:topLeftRadius="5dip"-->
+        <!--android:topRightRadius="5dip"-->
+        <!--/>-->
     <stroke
         android:width="1dip"
         android:color="@color/colorPrimary" />
