Delete and View Group Done

--- a/app/src/main/res/layout/activity_add_group.xml
+++ b/app/src/main/res/layout/activity_add_group.xml
@@ -77,7 +77,8 @@
                             android:background="@null"
                             android:ems="10"
                             android:hint="Group Name"
-                            android:inputType="textPersonName"
+                            android:inputType="text"
+                            android:maxLength="20"
                             app:layout_constraintHorizontal_bias="0.0"
                             app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintRight_toRightOf="parent"
@@ -119,7 +120,8 @@
                             android:ems="10"
                             android:gravity="top"
                             android:hint="Description"
-                            android:inputType="textPersonName"
+                            android:inputType="text"
+                            android:maxLines="3"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintHorizontal_bias="0.0"
                             app:layout_constraintLeft_toLeftOf="parent"
@@ -166,7 +168,8 @@
                             android:ems="10"
                             android:gravity="top"
                             android:hint="Reply Message"
-                            android:inputType="textPersonName"
+                            android:inputType="text"
+                            android:maxLines="2"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintHorizontal_bias="0.0"
                             app:layout_constraintLeft_toLeftOf="parent"
@@ -271,26 +274,8 @@
                         app:layout_constraintHorizontal_bias="0.0"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/voicemail"
+                        app:layout_constraintTop_toBottomOf="@+id/readsms"
                         app:layout_constraintVertical_bias="0.0" />
-
-                    <CheckBox
-                        android:id="@+id/voicemail"
-                        android:layout_width="wrap_content"
-                        android:layout_height="29dp"
-                        android:layout_marginEnd="8dp"
-                        android:layout_marginLeft="8dp"
-                        android:layout_marginRight="8dp"
-                        android:layout_marginStart="8dp"
-                        android:layout_marginTop="8dp"
-                        android:padding="5dp"
-                        android:text="Voice Mail"
-                        android:textSize="16sp"
-                        app:buttonTint="@color/colorPrimaryDark"
-                        app:layout_constraintHorizontal_bias="0.0"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/readsms" />
 
                     <CheckBox
                         android:id="@+id/autoreplysms"
